<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile_animal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABF8D89D"
    tools:context=".Fragment.ProfileVeterinarioFragment"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <Button
        android:id="@+id/editButtonsalute"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/salute_animal"
        android:textColorHighlight="@color/purple_700"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editButtonspese"
        app:layout_constraintTop_toBottomOf="@+id/name_mio_animale" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImg"
        android:layout_width="161dp"
        android:layout_height="161dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todoi"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_nuava_foto_mio_animale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/nuovaSegnalazione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/editButtonspese"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/spese_animal"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_mio_animale" />

    <TextView
        android:id="@+id/name_mio_animale"
        android:layout_width="328dp"
        android:layout_height="39dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="42dp"
        android:layout_weight="1"
        android:fontFamily="@font/coustard"
        android:text="@string/nome_animale"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImg" />


</androidx.constraintlayout.widget.ConstraintLayout>