<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="20dp"
    app:cardUseCompatPadding="true"

    >


    <RelativeLayout
        android:id="@+id/animali_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ABF8D89D"
        android:padding="8dp">


        <ImageView
            android:id="@+id/img1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            android:contentDescription="@string/immagine" />

        <TextView
            android:id="@+id/nome_item"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/nomeanimal"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/specie_item"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nome_item"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/img1"
            android:text="@string/specie"
            android:textColor="#000"
            android:textSize="18sp" />


    </RelativeLayout>
    <Button
        android:id="@+id/btn_follow"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_alignTop="@+id/img1"
        android:layout_alignBottom="@+id/img1"
        android:layout_marginStart="208dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="19dp"
        android:textSize="12dp"
        android:visibility="gone"
        android:layout_toEndOf="@+id/img1"
        android:text="Follow" />



</androidx.cardview.widget.CardView>


